--- a/.drone.yml
+++ b/.drone.yml
@@ -26,10 +26,8 @@ steps:
     BINTRAY_USER:
       from_secret: BINTRAY_USER
   when:
-    branch:
-    - master
     event:
-    - tag
+    - promote
 
 - name: publish
   image: plugins/github-release
@@ -38,10 +36,9 @@ steps:
       from_secret: GITHUB_TOKEN
     draft: true
     files: build/repository/com/molikuner/sqldelight/simple-jvm-driver/*/*
+    title: ${DRONE_TAG=${DRONE_DEPLOY_TO}}
   when:
-    branch:
-    - master
     event:
-    - tag
+    - promote
 
 ...
