Update drone to auto publish on new tag
The publish plugin by drone doesn't support publishing by "deploying",
so this is the only way. The cool thing about this, is that you really
have a CD that way.

--- a/.drone.yml
+++ b/.drone.yml
@@ -26,7 +26,7 @@ steps:
       from_secret: GPG_PASSPHRASE
   when:
     event:
-    - promote
+      - tag
 
 - name: publish
   image: plugins/github-release
@@ -35,9 +35,8 @@ steps:
       from_secret: GITHUB_TOKEN
     draft: true
     files: build/repository/com/molikuner/sqldelight/simple-jvm-driver/*/*
-    title: ${DRONE_TAG=${DRONE_DEPLOY_TO}}
   when:
     event:
-    - promote
+      - tag
 
 ...
