Pin Java version to 11 in CI
Gradle and/or Kotlin might not support the newest versions.

--- a/.drone.yml
+++ b/.drone.yml
@@ -9,14 +9,14 @@ platform:
 
 steps:
 - name: build
-  image: openjdk:jdk-slim
+  image: openjdk:11-jdk-slim
   commands:
   - ./gradlew build
   - ./gradlew dokkaJar
   - ./gradlew sourceJar
 
 - name: sign
-  image: openjdk:jdk-slim
+  image: openjdk:11-jdk-slim
   commands:
   - ./gradlew publishDefaultPublicationToMavenRepository
   environment:
